# pyPolCal

./: .gitignore  .gitmodules  20230914_processed_table.csv  675nm_no_IMR_offset_with_dichroic.py  README.md  charis_compatibility_testing.ipynb  constants.py  csv_tools.py  example.py  helper_funcs.py  instrument_dictionaries.py  instrument_mm.py  instrument_mm_first_test.ipynb  instruments.py  instruments_jax.py  mcmc_helper_funcs.py  mcmc_helper_funcs_jax.py  on_sky.py  on_sky_funcs.py  plotting.py  plotting_rewrite.py  pseudo_code_from_Max.py  pyproject.toml  scipy_minimize_675nm.ipynb  scipy_minimize_example.ipynb
CHARIS/: CHARIS_MCMC.ipynb  CHARIS_minimize.ipynb  CHARIS_minimize_internalcal_example.ipynb  Derotator_HWP_Physical_Model_For_Thomas.ipynb  mcmc_development.ipynb  mueller_modeling.ipynb  naive_fits_plots.ipynb  physical_model_plots.ipynb  physical_models.py
data/: 20230919_processed_table.csv  double_diff_stds_610.npy  double_diff_stds_625-50.npy  double_diff_stds_675-50.npy  double_diff_stds_725-50.npy  double_diff_stds_750-50.npy  double_diff_stds_775-50.npy  double_diff_stds_Open.npy  double_diffs_610.npy  double_diffs_625-50.npy  double_diffs_675-50.npy  double_diffs_725-50.npy  double_diffs_750-50.npy  double_diffs_775-50.npy  double_diffs_Open.npy  double_sum_stds_625-50.npy  double_sum_stds_670.npy  double_sum_stds_675-50.npy  double_sum_stds_725-50.npy  double_sum_stds_750-50.npy  double_sum_stds_775-50.npy  double_sum_stds_Open.npy  double_sums_625-50.npy  double_sums_670.npy  double_sums_675-50.npy  double_sums_725-50.npy  double_sums_750-50.npy  double_sums_775-50.npy  double_sums_Open.npy  instrument_configurations_670.json  instrument_configurations_775-50.json  instrument_configurations_Open.json
em_gain_calculations/: 20230919_calculate_em_gain_ratios.ipynb
miscellaneous/: instrument_mm.py  (+6 more)
(+1137 files in other folders)
