[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vampires_calibration"
readme = "README.md"
version = "0.1.0"
description = "Polarimetric calibration package for SCExAO CHARIS and VAMPIRES"
authors = [
    {name = "Thomas McIntosh", email = "thomasmcintosh@ucsb.edu"},
    {name = "Rebecca Zhang", email = "manxuanzhang@ucsb.edu"}
]
requires-python = ">=3.7,<3.10"

# Runtime dependencies
dependencies = [
    "numpy==1.26.4",
    "astropy==6.0.1",
    "scipy",
    "matplotlib",
    "pyMuellerMat @ git+https://github.com/maxwellmb/pyMuellerMat@physical_models",
    "pandas",
    "photutils"
]

# Optional dependencies (install with: pip install .[mcmc])
[project.optional-dependencies]
mcmc = [
"h5py",
"corner",
"emcee",
"jax",
"jaxlib"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true