[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPolCal"
readme = "README.md"
version = "0.1.0"
description = "Polarimetric calibration package"
authors = [
    {name = "Thomas McIntosh", email = "thomasmcintosh@ucsb.edu"},
    {name = "Rebecca Zhang", email = "manxuanzhang@ucsb.edu"}
]
requires-python = ">=3.11"

# Runtime dependencies
dependencies = [
    "numpy",
    "astropy",
    "scipy",
    "matplotlib",
    "pyMuellerMat @ git+https://github.com/maxwellmb/pyMuellerMat@physical_models",
    "pandas",
    "photutils",
    "h5py",
    "corner",
    "emcee",
    "jax",
    "jaxlib",
    "tqdm"
]



[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true